force-app/main/default/objects/SFDC_Strategy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N70000002MeyzEAC</relationshipName>
    <type>Lookup</type>
</CustomField>