force-app/main/default/objects/SFDC_Strategy__c/fields/Account_Plan_Planning_Year__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Planning_Year__c</fullName>
    <formula>TEXT(SFDC_Acct_Plan__r.Plan_Starting_Fiscal_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Planning Year</label>
    <type>Text</type>
</CustomField>