force-app/main/default/objects/SFDC_Strategy__c/fields/Account_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Status__c</fullName>
    <label>AP Status When Strategy Created</label>
    <length>50</length>
    <type>Text</type>
</CustomField>