force-app/main/default/objects/SFDC_Strategy__c/fields/Actions_Items_and_Additional_Plans__c.field-meta.xml
<CustomField>
    <fullName>Actions_Items_and_Additional_Plans__c</fullName>
    <label>Actions Items and Additional Plans</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>