force-app/main/default/objects/SFDC_Strategy__c/fields/Benefit_of_Implemented_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Benefit_of_Implemented_Strategy__c</fullName>
    <label>Benefit of Implemented Strategy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>