force-app/main/default/objects/SFDC_Strategy__c/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <inlineHelpText>Gartner&apos;s top 10 list.  Choose the one that fits the best.</inlineHelpText>
    <label>Business Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Process Improvement</fullName>
            </value>
            <value>
                <fullName>Reducing Enterprise Costs</fullName>
            </value>
            <value>
                <fullName>Increasing the use of information/analytics</fullName>
            </value>
            <value>
                <fullName>Improving enterprise workforce effectiveness</fullName>
            </value>
            <value>
                <fullName>Attracting and retaining new customers</fullName>
            </value>
            <value>
                <fullName>Managing change initiatives</fullName>
            </value>
            <value>
                <fullName>Creating new products or services (innovation)</fullName>
            </value>
            <value>
                <fullName>Targeting customers and markets more effectively</fullName>
            </value>
            <value>
                <fullName>Consolidating business operations</fullName>
            </value>
            <value>
                <fullName>Expanding current customer relationships</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>