force-app/main/default/objects/SFDC_Strategy__c/fields/Business_Priority_Other__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority_Other__c</fullName>
    <inlineHelpText>If you chose &quot;Other&quot; from the Business Priority drop-down.  Please provide a priority description.</inlineHelpText>
    <label>Business Priority (Other)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>