force-app/main/default/objects/SFDC_Strategy__c/fields/Closed_Opportunity_Value_1st__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity_Value_1st__c</fullName>
    <formula>&apos;USD &apos; + TEXT( ROUND(Closed_Opportunity_Value_1st_Half__c ,2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Opportunity Value (1st Half)</label>
    <type>Text</type>
</CustomField>