force-app/main/default/objects/SFDC_Strategy__c/fields/Closed_Opportunity_Value_1st_Half__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity_Value_1st_Half__c</fullName>
    <label>Closed Opportunity Value (1st Half) Num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>