force-app/main/default/objects/SFDC_Strategy__c/fields/Closed_Opportunity_Value_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity_Value_Next_Year__c</fullName>
    <label>Closed Opportunity Value (Next Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>