force-app/main/default/objects/SFDC_Strategy__c/fields/Customer_Business_Challenges_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Challenges_Objectives__c</fullName>
    <inlineHelpText>Business imperatives, pains, needs</inlineHelpText>
    <label>Customer Objectives</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>