force-app/main/default/objects/SFDC_Strategy__c/fields/Dell_s_Strategy_Response__c.field-meta.xml
<CustomField>
    <fullName>Dell_s_Strategy_Response__c</fullName>
    <inlineHelpText>What is Dell strategy to meet the customer&apos;s objectives.</inlineHelpText>
    <label>Dell Proposed Solution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>