force-app/main/default/objects/SFDC_Strategy__c/fields/Detail_the_Reason_for_Won_Lost__c.field-meta.xml
<CustomField>
    <fullName>Detail_the_Reason_for_Won_Lost__c</fullName>
    <label>Detail the Reason for Won/Lost</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>