force-app/main/default/objects/SFDC_Strategy__c/fields/Did_you_realize_your_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Did_you_realize_your_Strategy__c</fullName>
    <inlineHelpText>Realized Strategies are measured through related Closed-Won Opportunities.
The update of this field is done in the future when you are ready to close out this strategy.</inlineHelpText>
    <label>Did you realize your Strategy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I achieved this Strategy in the committed timeframe</fullName>
            </value>
            <value>
                <fullName>No, I did not achieve this Strategy</fullName>
            </value>
            <value>
                <fullName>Still in Progress, I will achieve it in 2nd Half</fullName>
            </value>
            <value>
                <fullName>Still in Progress, Strategy to be recreated in next year&apos;s Account Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>