force-app/main/default/objects/SFDC_Strategy__c/fields/Enterprise_Business_Issue__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Business_Issue__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Customer Objective</label>
    <type>TextArea</type>
</CustomField>