force-app/main/default/objects/SFDC_Strategy__c/fields/Incumbent_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Vendor__c</fullName>
    <inlineHelpText>If Dell is not the incumbent vendor, who is the incumbent?</inlineHelpText>
    <label>Incumbent Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>