force-app/main/default/objects/SFDC_Strategy__c/fields/Is_Dell_the_Incumbent_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Dell_the_Incumbent_Vendor__c</fullName>
    <inlineHelpText>From this strategy perspective, are we the incumbent vendor?</inlineHelpText>
    <label>Is Dell the Incumbent Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>