force-app/main/default/objects/SFDC_Strategy__c/fields/IT_Implications__c.field-meta.xml
<CustomField>
    <fullName>IT_Implications__c</fullName>
    <inlineHelpText>Predicted impact from an IT perspective</inlineHelpText>
    <label>IT Implications</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>