force-app/main/default/objects/SFDC_Strategy__c/fields/Key_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Key_Dependencies__c</fullName>
    <inlineHelpText>Are there any dependencies that needs to be fulfilled to achieve the initiative</inlineHelpText>
    <label>Key Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>