force-app/main/default/objects/SFDC_Strategy__c/fields/Objective_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Objective_Initiative__c</fullName>
    <inlineHelpText>Add the details re. the initiative or objective to drive specific business cases</inlineHelpText>
    <label>Objective / Initiative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>