force-app/main/default/objects/SFDC_Strategy__c/fields/Open_Opportunity_Value_2nd__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Value_2nd__c</fullName>
    <formula>&apos;USD &apos; + TEXT( ROUND( Open_Opportunity_Value_2nd_Half__c ,2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Opportunity Value (2nd Half)</label>
    <type>Text</type>
</CustomField>