force-app/main/default/objects/SFDC_Strategy__c/fields/Open_Opportunity_Value_2nd_Half__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Value_2nd_Half__c</fullName>
    <label>Open Opportunity Value (2nd Half) Num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>