force-app/main/default/objects/SFDC_Strategy__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <inlineHelpText>Positive/external factors</inlineHelpText>
    <label>Opportunities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>