force-app/main/default/objects/SFDC_Strategy__c/fields/Potential_Strategy_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Strategy_Value__c</fullName>
    <inlineHelpText>Add the Estimated total value</inlineHelpText>
    <label>Potential Strategy Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>