force-app/main/default/objects/SFDC_Strategy__c/fields/Power_Sponsor_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Power_Sponsor_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Power Sponsor / Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N70000002Mf3vEAC</relationshipName>
    <type>Lookup</type>
</CustomField>