force-app/main/default/objects/SFDC_Strategy__c/fields/Proposed_Strategy_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Strategy_Details__c</fullName>
    <inlineHelpText>Add the details on the agreed joint strategy with the partner</inlineHelpText>
    <label>Proposed Strategy Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>