force-app/main/default/objects/SFDC_Strategy__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>What region(s) does this strategy impact?</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>US/CAN</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>