force-app/main/default/objects/SFDC_Strategy__c/fields/Risk_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation__c</fullName>
    <inlineHelpText>How would you handle the risks</inlineHelpText>
    <label>Risk Mitigation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>