force-app/main/default/objects/SFDC_Strategy__c/fields/SFDC_Acct_Plan__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Acct_Plan__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <label>Account Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipLabel>Strategy</relationshipLabel>
    <relationshipName>Product_Strategy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>