force-app/main/default/objects/SFDC_Strategy__c/fields/Sponsor_Champion__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
    <inlineHelpText>Contact that support this strategy</inlineHelpText>
    <label>Strategy Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Strategy (Sponsor / Champion)</relationshipLabel>
    <relationshipName>R00N70000002Mf40EAC</relationshipName>
    <type>Lookup</type>
</CustomField>