force-app/main/default/objects/SFDC_Strategy__c/fields/Strategy_Aim__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Aim__c</fullName>
    <label>Strategy Aim</label>
    <type>TextArea</type>
</CustomField>