force-app/main/default/objects/SFDC_Strategy__c/fields/Strategy_Potential_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Potential_Service_Revenue__c</fullName>
    <inlineHelpText>What is the total value of estimated Services associated with this strategy</inlineHelpText>
    <label>Strategy Potential Service Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>