force-app/main/default/objects/SFDC_Strategy__c/fields/Strategy_Stage__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Stage__c</fullName>
    <label>Strategy Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Objectives</fullName>
            </value>
            <value>
                <fullName>IT Implications</fullName>
            </value>
            <value>
                <fullName>Solution Strengths</fullName>
            </value>
            <value>
                <fullName>Solution Risks</fullName>
            </value>
            <value>
                <fullName>Dell Proposed Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>