force-app/main/default/objects/SFDC_Strategy__c/fields/Strategy_Status__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Status__c</fullName>
    <description>Strategy Status</description>
    <label>Strategy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending Specialist</fullName>
            </value>
            <value>
                <fullName>Submitted for Review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>