force-app/main/default/objects/SFDC_Strategy__c/fields/Strategy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Summary__c</fullName>
    <label>Strategy Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>