force-app/main/default/objects/SFDC_Strategy__c/fields/Strategy_Total_Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Total_Revenue_Potential__c</fullName>
    <formula>Strategy_Potential_Product_Revenue__c + Strategy_Potential_Service_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Autopopulated from the potential product and service revenues</inlineHelpText>
    <label>Strategy Total Revenue Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>