force-app/main/default/objects/SFDC_Strategy__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Positive/internal factors</inlineHelpText>
    <label>Solution Strengths</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>