force-app/main/default/objects/SFDC_Strategy__c/fields/Submit_for_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Review_Comments__c</fullName>
    <description>Submit for Review Comments</description>
    <label>Submit for Review Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>