force-app/main/default/objects/SFDC_Strategy__c/fields/SWOT_Threats__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Threats__c</fullName>
    <inlineHelpText>Positive/internal factors</inlineHelpText>
    <label>Threats</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>