force-app/main/default/objects/SFDC_Strategy__c/fields/Technology_Priority__c.field-meta.xml
<CustomField>
    <fullName>Technology_Priority__c</fullName>
    <inlineHelpText>Gartner&apos;s top 10 list.  Choose the one that fits the best.</inlineHelpText>
    <label>Technology Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Cloud computing</fullName>
            </value>
            <value>
                <fullName>Web 2.0</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Voice Communications</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Mobile technologies</fullName>
            </value>
            <value>
                <fullName>Documentation Management</fullName>
            </value>
            <value>
                <fullName>Data Storage</fullName>
            </value>
            <value>
                <fullName>Data Consolidation</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>