force-app/main/default/objects/SFDC_Strategy__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <inlineHelpText>Negative/external factors</inlineHelpText>
    <label>Solution Risks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>