force-app/main/default/objects/SFDC_Strategy__c/fields/Top_Competitor_name_1__c.field-meta.xml
<CustomField>
    <fullName>Top_Competitor_name_1__c</fullName>
    <inlineHelpText>In your opinion who is our top competitor for this strategy?</inlineHelpText>
    <label>Top Competitor name 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>