force-app/main/default/objects/SFDC_Strategy__c/fields/Top_Competitor_Strategy_1__c.field-meta.xml
<CustomField>
    <fullName>Top_Competitor_Strategy_1__c</fullName>
    <inlineHelpText>What do you feel the top competitor strategy will be?</inlineHelpText>
    <label>Top Competitor Strategy 1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>