force-app/main/default/objects/SFDC_Strategy__c/fields/Top_Competitor_Strategy_2__c.field-meta.xml
<CustomField>
    <fullName>Top_Competitor_Strategy_2__c</fullName>
    <inlineHelpText>What do you feel the 2nd top competitor strategy will be?</inlineHelpText>
    <label>Top Competitor Strategy 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>