force-app/main/default/objects/SFDC_Strategy__c/fields/Transformation__c.field-meta.xml
<CustomField>
    <fullName>Transformation__c</fullName>
    <label>Transformation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Application Transformation</fullName>
            </value>
            <value>
                <fullName>IT Transformation</fullName>
            </value>
            <value>
                <fullName>Security Information</fullName>
            </value>
            <value>
                <fullName>Workforce Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>