force-app/main/default/objects/SFDC_Strategy__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Negative/internal factors</inlineHelpText>
    <label>Weaknesses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>