force-app/main/default/objects/SFDC_Strategy__c/fields/What_BU_s_are_involved__c.field-meta.xml
<CustomField>
    <fullName>What_BU_s_are_involved__c</fullName>
    <label>What BU´s are involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boomi</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client S&amp;P</fullName>
            </value>
            <value>
                <fullName>Compute (Servers)</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Enterprise Infrastructure</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Pivotal</fullName>
            </value>
            <value>
                <fullName>RSA</fullName>
            </value>
            <value>
                <fullName>SecureWorks</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Virtustream</fullName>
            </value>
            <value>
                <fullName>VMware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>