force-app/main/default/objects/SFDC_Strategy__c/fields/What_Dell_Services_will_you_offer__c.field-meta.xml
<CustomField>
    <fullName>What_Dell_Services_will_you_offer__c</fullName>
    <inlineHelpText>If you selected Services as an Domain, what services do you plan to offer?</inlineHelpText>
    <label>What Dell Services will you offer?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Support &amp; Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>